[gd_scene load_steps=5 format=3 uid="uid://o3aj0yiew54"]

[ext_resource type="Theme" uid="uid://djb1bkq82a1wy" path="res://assets/resources/UI_theme.tres" id="1_4rct3"]
[ext_resource type="Script" uid="uid://b4hsndr3p144b" path="res://ui/settingspanel.gd" id="2_4rct3"]
[ext_resource type="Texture2D" uid="uid://cjkyiyg0n6t0e" path="res://assets/icons/symbls.png" id="3_bbkow"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ggqnx"]
atlas = ExtResource("3_bbkow")
region = Rect2(208, 0, 16, 16)

[node name="Settingspanel" type="Panel"]
offset_right = 512.0
offset_bottom = 480.0
theme = ExtResource("1_4rct3")
script = ExtResource("2_4rct3")
metadata/_custom_type_script = "uid://b2dy5mxgwngh6"

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 6.0
offset_right = 24.0
offset_bottom = 22.0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_ggqnx")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -84.0
offset_right = 114.0
offset_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "MainMenu"

[node name="Status" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_top = 6.0
offset_right = 0.5
offset_bottom = 26.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.329412, 0.380392, 0.396078, 1)
text = "status"

[node name="WorldSeed" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -28.0
offset_right = 116.0
offset_bottom = -8.0
grow_vertical = 0
text = "world seed: "

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
